# mcp-obsidian-enhanced

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  README.md  TOOL_DESIGN.md  pyproject.toml  run_server.py
helper-documentation/: how_to_prompts.txt
src/mcp_obsidian/: __init__.py  config.py  obsidian.py  prompts.py  server.py
src/mcp_obsidian/plugins/: __init__.py  smart_connections.py  templater.py
src/mcp_obsidian/tools/: __init__.py  active.py  base.py  files.py  folders.py  knowledge.py  metadata.py  search.py  templates.py
src/mcp_obsidian/utils/: __init__.py  errors.py  frontmatter.py  path.py  templates.py
tests/: test_obsidian.py  test_tools.py  test_utils.py
